--- a/Coding Challenge/MovieRatingAnalyser_Level2.ipynb
+++ b/Coding Challenge/MovieRatingAnalyser_Level2.ipynb
@@ -2,9 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the Movie Ratings Analyzer!\n",
+      "\n",
+      "Results:\n",
+      "The average rating of all movies: 4.20\n",
+      "\n",
+      "Movie Recommendations:\n",
+      "ABC - Consider Later.\n",
+      "DEF - Consider Later.\n",
+      "GHI - Consider Later.\n",
+      "LMN - Consider Later.\n",
+      "OPQ - Consider Later.\n",
+      "\n",
+      "Highest-rated movie: GHI\n"
+     ]
+    }
+   ],
    "source": [
     "movie_ratings = {}\n",
     "def add_movie_rating(movie_name, rating):\n",
