--- a/Python Basics/3.Data Type and Stucture.ipynb
+++ b/Python Basics/3.Data Type and Stucture.ipynb
@@ -321,8 +321,8 @@
     "s = \"Hello, World!\"\n",
     "index = s.find(\"World\")   \n",
     "rindex = s.rfind(\"World\") # (searches from the right)\n",
-    "print(index) # 7\n",
-    "print(rindex) # 7"
+    "print(index)\n",
+    "print(rindex) "
    ]
   },
   {
