--- a/Explorator Data Analysis/Diwali_sales/Diwali_EDA.ipynb
+++ b/Explorator Data Analysis/Diwali_sales/Diwali_EDA.ipynb
@@ -275,7 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1 = pd.read_csv(r\"D:\\Python\\EDA\\Diwali_sales\\Diwali.csv\", encoding='unicode_escape')"
+    "df1 = pd.read_csv(r\"D:\\Python\\Explorator Data Analysis\\Diwali_sales\\Diwali.csv\", encoding='unicode_escape')"
    ]
   },
   {
