--- a/Numpy/Numpy.ipynb
+++ b/Numpy/Numpy.ipynb
@@ -4118,23 +4118,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[array([1, 2, 3]), array([4, 5, 6])]"
+       "[array([1, 2]), array([3, 4]), array([5, 6])]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "arr1 = np.array([1,2,3,4,5,6])\n",
-    "splitting = np.split(arr1, 2)\n",
+    "splitting = np.split(arr1, 3)\n",
     "splitting"
    ]
   },
