--- a/Python Basics/3.Data Type and Stucture.ipynb
+++ b/Python Basics/3.Data Type and Stucture.ipynb
@@ -2601,7 +2601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -2624,7 +2624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -2633,7 +2633,7 @@
        "'Virat Kohli'"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2644,7 +2644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -2653,7 +2653,7 @@
        "'Virat Kohli'"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2664,7 +2664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -2681,7 +2681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -2692,7 +2692,7 @@
        " 'South Africa': 'Du Plesis'}"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2703,7 +2703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2715,7 +2715,7 @@
        " 'India': 'Rohith Sharma'}"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2728,7 +2728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2741,7 +2741,7 @@
        " 'England': 'Ben Stokes'}"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2754,7 +2754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2767,7 +2767,7 @@
        " 'England': {'T20': 'Ben Stokes', 'ODI': 'Eoin Morgan', 'Test': 'Joe Root'}}"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2780,7 +2780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2789,7 +2789,7 @@
        "'Ben Stokes'"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2800,23 +2800,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "captains.update({'India': [('T20', 'Surya Kumar Yadav'), ('ODI', 'Rohith Sharma'), ('Test', 'Rohith Sharma')]})"
+    "captains.update({'India': [('T20', 'Surya Kumar Yadav'), ('ODI', 'Rohit Sharma'), ('Test', 'Rohit Sharma')]})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Rohit Sharma'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "captains['India'][1][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Pakistan': 'Babar Azam', 'Australia': 'Tim Paine', 'South Africa': 'Du Plesis', 'India': [('T20', 'Surya Kumar Yadav'), ('ODI', 'Rohith Sharma'), ('Test', 'Rohith Sharma')], 'England': {'T20': 'Ben Stokes', 'ODI': 'Eoin Morgan', 'Test': 'Joe Root'}}\n"
+      "{'Pakistan': 'Babar Azam', 'Australia': 'Tim Paine', 'South Africa': 'Du Plesis', 'India': [('T20', 'Surya Kumar Yadav'), ('ODI', 'Rohit Sharma'), ('Test', 'Rohit Sharma')], 'England': {'T20': 'Ben Stokes', 'ODI': 'Eoin Morgan', 'Test': 'Joe Root'}}\n"
      ]
     }
    ],
@@ -2826,7 +2846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2835,7 +2855,7 @@
        "'Surya Kumar Yadav'"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2890,6 +2910,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 3, 4, 5, 6, 7, 9, 10}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [9,10,1,1,1,2,2,2,3,3,4,4,5,6,7,4,5,6]\n",
+    "set(a)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2905,7 +2946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2914,8 +2955,9 @@
        "{1, 2, 3, 4, 5, 7}"
       ]
      },
+     "execution_count": 19,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2926,7 +2968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2939,20 +2981,20 @@
    ],
    "source": [
     "# Adding elements to a set\n",
-    "unique_numbers.add(8)\n",
+    "unique_numbers.add(6)\n",
     "print(unique_numbers)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1, 2, 4, 5, 6, 7}\n"
+      "{1, 2, 3, 4, 5, 6, 7}\n"
      ]
     }
    ],
@@ -2964,14 +3006,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6\n"
+      "7\n"
      ]
     }
    ],
@@ -2983,7 +3025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2992,7 +3034,7 @@
      "text": [
       "Union: {1, 2, 3, 4, 5}\n",
       "Intersection: {3}\n",
-      "Difference: {1, 2}\n"
+      "Difference: {4, 5}\n"
      ]
     }
    ],
@@ -3004,7 +3046,7 @@
     "# Set operations like union, intersection, and difference\n",
     "union_set = set1.union(set2)\n",
     "intersection_set = set1.intersection(set2)\n",
-    "difference_set = set1.difference(set2)\n",
+    "difference_set = set2.difference(set1)\n",
     "print(\"Union:\", union_set)\n",
     "print(\"Intersection:\", intersection_set)\n",
     "print(\"Difference:\", difference_set)"
@@ -3012,7 +3054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -3021,8 +3063,9 @@
        "{'Python', 'fun', 'is', 'powerful,', 'versatile,'}"
       ]
      },
+     "execution_count": 29,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -3054,7 +3097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -3063,8 +3106,9 @@
        "{1, 2, 3, 4, 6, 8}"
       ]
      },
+     "execution_count": 36,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -3075,7 +3119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -3084,7 +3128,7 @@
        "{1, 2, 5, 6, 8}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3097,7 +3141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -3105,7 +3149,7 @@
      "output_type": "stream",
      "text": [
       "22\n",
-      "2.0\n",
+      "4.4\n",
       "8\n",
       "1\n",
       "4.4\n",
@@ -3118,7 +3162,7 @@
    ],
    "source": [
     "print(sum(d))\n",
-    "print(sum(d)/len(sam))\n",
+    "print(sum(d)/len(d))\n",
     "print(max(d))\n",
     "print(min(d))\n",
     "\n",
@@ -3146,7 +3190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -3162,8 +3206,9 @@
        "tuple"
       ]
      },
+     "execution_count": 43,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -3177,7 +3222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -3186,39 +3231,49 @@
      "text": [
       "{1, 2, 3, 4, 5}\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "set"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# From List to Set:\n",
     "my_list = [1, 2, 2, 3, 4, 4, 5]\n",
     "my_set = set(my_list)\n",
-    "print(my_set)"
+    "print(my_set)\n",
+    "type(my_set)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3, 4, 5]\n"
+      "{'apple': 5, 'banana': 2, 'orange': 3}\n"
      ]
     }
    ],
    "source": [
-    "# Set to List (and Vice Versa)\n",
-    "# From Set to List:\n",
-    "my_set = {1, 2, 3, 4, 5}\n",
-    "my_list = list(my_set)\n",
-    "print(my_list)"
+    "# List of Tuples to Dictionary:\n",
+    "my_list_of_tuples = [[\"apple\", 5], [\"banana\", 2], [\"orange\", 3]]\n",
+    "my_dict = dict(my_list_of_tuples)\n",
+    "print(my_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -3234,8 +3289,9 @@
        "list"
       ]
      },
+     "execution_count": 48,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -3248,7 +3304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -3269,27 +3325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1, 2, 3, 4, 5)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# From Set to Tuple:\n",
-    "my_set = {1, 2, 3, 4, 5}\n",
-    "my_list = tuple(my_set)\n",
-    "print(my_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -3298,38 +3334,29 @@
      "text": [
       "{'apple': 5, 'banana': 2, 'orange': 3}\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['apple', 'banana', 'orange'])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Tuple to Dictionary:\n",
     "my_tuple = ((\"apple\", 5), (\"banana\", 2), (\"orange\", 3))\n",
     "my_dict = dict(my_tuple)\n",
-    "print(my_dict)"
+    "print(my_dict)\n",
+    "my_dict.keys()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'apple': 5, 'banana': 2, 'orange': 3}\n"
-     ]
-    }
-   ],
-   "source": [
-    "# List of Tuples to Dictionary:\n",
-    "my_list_of_tuples = [(\"apple\", 5), (\"banana\", 2), (\"orange\", 3)]\n",
-    "my_dict = dict(my_list_of_tuples)\n",
-    "print(my_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -3349,28 +3376,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{1: 2, 2: 6}"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(('apple', 5), ('banana', 2), ('orange', 3))\n"
+     ]
     }
    ],
    "source": [
-    "v = [[1,2],[2,6]]\n",
-    "z = dict(v)\n",
-    "z"
+    "my_dict = {\"apple\": 5, \"banana\": 2, \"orange\": 3}\n",
+    "tuple_of_tuples = tuple(my_dict.items())\n",
+    "print(my_list_of_tuples)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set to List (and Vice Versa)\n",
+    "# From Set to List:\n",
+    "my_set = {1, 2, 3, 4, 5}\n",
+    "my_list = list(my_set)\n",
+    "print(my_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# From Set to Tuple:\n",
+    "my_set = {1, 2, 3, 4, 5}\n",
+    "my_list = tuple(my_set)\n",
+    "print(my_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -3379,8 +3445,9 @@
        "(12, 2, 5, 6, 9, 7, 8, 6)"
       ]
      },
+     "execution_count": 57,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -3391,7 +3458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -3400,58 +3467,15 @@
        "[2, 5, 6, 9, 7, 8, 6]"
       ]
      },
+     "execution_count": 58,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "a = (2,5,6,9,7,8,6)\n",
     "c = list(a)\n",
     "c"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tuple"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "a = [1,2,3,4]\n",
-    "\n",
-    "# List to Tuple\n",
-    "b=tuple(a)\n",
-    "type(b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "list"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "#tuple to list\n",
-    "c = list(b)\n",
-    "type(c)"
    ]
   },
   {
