--- a/Python Basics/4.Conditional_Statements.ipynb
+++ b/Python Basics/4.Conditional_Statements.ipynb
@@ -25,27 +25,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "c7337c57",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x is greater than 5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 10\n",
-    "if x > 5:\n",
-    "    print(\"x is greater than 5\")"
+    "if x < 5:\n",
+    "    x+=1\n",
+    "    print(x)\n",
+    "    print(\"x is greater than 5\")\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "0390d5b5",
    "metadata": {},
    "outputs": [
@@ -53,6 +48,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "11\n",
       "x is not greater than 5\n"
      ]
     }
@@ -62,12 +58,14 @@
     "if x < 5:\n",
     "    print(\"x is greater than 5\")\n",
     "else:\n",
+    "    x+=1\n",
+    "    print(x)\n",
     "    print(\"x is not greater than 5\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "facff153",
    "metadata": {},
    "outputs": [
@@ -75,16 +73,60 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bye\n"
+      "Hello\n"
      ]
     }
    ],
    "source": [
-    "a = False #try assigning False to a\n",
+    "a = True #try assigning False to a\n",
     "if a:\n",
     "    print('Hello') #try removing the indentation\n",
     "else:\n",
     "    print('Bye')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8819a980",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1,2,3,4,5,6]\n",
+    "if 10 not in a:\n",
+    "    print(\"True\")\n",
+    "else:\n",
+    "    print(\"False\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "dabcb82b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1,2,3,4,5,6]\n",
+    "if type(a) == list:\n",
+    "    print(\"True\")\n",
+    "else:\n",
+    "    print(\"False\")"
    ]
   },
   {
@@ -118,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "41be216d",
    "metadata": {},
    "outputs": [
@@ -139,6 +181,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "dd2c444c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Divisible by 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = int(input(\"Enter a number: \"))\n",
+    "if x % 3 == 0:\n",
+    "    print(\"Divisible by 3\")\n",
+    "else:\n",
+    "    print(\"Not Divisible by 3\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b7a34af5",
    "metadata": {},
@@ -150,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "87917060",
    "metadata": {},
    "outputs": [
@@ -173,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "60e046a6",
    "metadata": {},
    "outputs": [
@@ -181,21 +245,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "odd\n"
+      "44 is even\n"
      ]
     }
    ],
    "source": [
-    "a = int(input(\"enter a no:\"))\n",
+    "a = int(input(\"enter a no:\"))   \n",
     "if a%2==0:\n",
-    "    print(\"even\")\n",
+    "    print(f\"{a} is even\")\n",
     "else:\n",
-    "    print(\"odd\")"
+    "    print(f\"{a} is odd\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "48002bbb",
    "metadata": {},
    "outputs": [
@@ -203,7 +267,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2032 is a leap year.\n"
+      "2028 is a leap year.\n"
      ]
     }
    ],
@@ -218,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "id": "c53d063a",
    "metadata": {},
    "outputs": [
@@ -226,7 +290,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "40  is divisible by 3 itself, hence I won't check if it is divisible by 5\n",
+      "17  is not divisible by 3 itself, hence I won't check if it is divisible by 5\n",
       "We understood if-else\n"
      ]
     }
@@ -674,7 +738,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -689,11 +753,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.12.2"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "37d99e6d4983f94fd607d31c1d056b3b7a9bea88684ae051e8fd79233b8b8e0c"
-   }
   }
  },
  "nbformat": 4,
