--- a/Python Basics/4.Conditional_Statements.ipynb
+++ b/Python Basics/4.Conditional_Statements.ipynb
@@ -28,10 +28,19 @@
    "execution_count": 2,
    "id": "c7337c57",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n",
+      "x is greater than 5\n"
+     ]
+    }
+   ],
    "source": [
     "x = 10\n",
-    "if x < 5:\n",
+    "if x > 5:\n",
     "    x+=1\n",
     "    print(x)\n",
     "    print(\"x is greater than 5\")\n",
@@ -73,12 +82,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello\n"
+      "Bye\n"
      ]
     }
    ],
    "source": [
-    "a = True #try assigning False to a\n",
+    "a = False #try assigning False to a\n",
     "if a:\n",
     "    print('Hello') #try removing the indentation\n",
     "else:\n",
@@ -87,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "8819a980",
    "metadata": {},
    "outputs": [
@@ -95,13 +104,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "False\n"
      ]
     }
    ],
    "source": [
     "a = [1,2,3,4,5,6]\n",
-    "if 10 not in a:\n",
+    "if 10 in a:\n",
     "    print(\"True\")\n",
     "else:\n",
     "    print(\"False\")"
@@ -160,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "41be216d",
    "metadata": {},
    "outputs": [
@@ -168,21 +177,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x is odd\n"
+      "x is even\n"
      ]
     }
    ],
    "source": [
-    "x = 5\n",
-    "if x % 2 == 0:\n",
-    "    print(\"x is even\")\n",
+    "x = 4\n",
+    "if x % 2 != 0:\n",
+    "    print(\"x is odd\")\n",
     "else:\n",
-    "    print(\"x is odd\")"
+    "    print(\"x is even\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "dd2c444c",
    "metadata": {},
    "outputs": [
@@ -190,7 +199,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Divisible by 3\n"
+      "Not Divisible by 3\n"
      ]
     }
    ],
@@ -214,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "87917060",
    "metadata": {},
    "outputs": [
@@ -229,7 +238,7 @@
    "source": [
     "#'a==4' is the conditional expression\n",
     "a = 4\n",
-    "if a!=5: \n",
+    "if a>=3: \n",
     "    print('Hello')\n",
     "else:\n",
     "    print('Bye')\n"
@@ -237,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "60e046a6",
    "metadata": {},
    "outputs": [
@@ -245,7 +254,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "44 is even\n"
+      "16 is even\n"
      ]
     }
    ],
@@ -259,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "id": "48002bbb",
    "metadata": {},
    "outputs": [
@@ -267,7 +276,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2028 is a leap year.\n"
+      "2024 is a leap year.\n"
      ]
     }
    ],
@@ -282,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "id": "c53d063a",
    "metadata": {},
    "outputs": [
@@ -290,7 +299,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17  is not divisible by 3 itself, hence I won't check if it is divisible by 5\n",
+      "40  is not divisible by 3 itself, hence I won't check if it is divisible by 5\n",
       "We understood if-else\n"
      ]
     }
@@ -324,7 +333,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
+   "id": "f52c3cf4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23 is not divisible by both 3 and 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "#let's find if a number is divisible by both 3 and 5\n",
+    "a = int(input(\"Enter the value of a: \"))\n",
+    "\n",
+    "if a % 3 == 0 and a % 5 == 0:\n",
+    "    print(f\"{a} is divisible by both 3 and 5\")\n",
+    "elif a % 3 == 0:\n",
+    "    print(f\"{a} is divisible by 3\")\n",
+    "elif a % 5 == 0:\n",
+    "    print(f\"{a} is divisible by 5\")\n",
+    "else:\n",
+    "    print(f\"{a} is not divisible by both 3 and 5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "b0334aa1",
    "metadata": {},
    "outputs": [
@@ -332,13 +369,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "How did that happen?\n"
+      "Yikes\n"
      ]
     }
    ],
    "source": [
     "a=5\n",
-    "b=5\n",
+    "b=4\n",
     "if a == b:\n",
     "    print(\"How did that happen?\")\n",
     "elif a > b:\n",
@@ -349,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "id": "a8606e24",
    "metadata": {},
    "outputs": [
@@ -369,35 +406,6 @@
     "    print(\"dont ask\")\n",
     "else:\n",
     "    print(\"i am outside\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "ad6916fa",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ohh! yes, it is divisible by 3\n"
-     ]
-    }
-   ],
-   "source": [
-    "#let's find if a number is divisible by both 3 and 5\n",
-    "\n",
-    "a = int(input('Tell a number : '))\n",
-    "\n",
-    "if a % 3 == 0 and a % 5 == 0:\n",
-    "    print(a, ' is divisible by both 3 and 5')\n",
-    "elif a%3==0:\n",
-    "    print('Ohh! yes, it is divisible by 3')\n",
-    "elif a%5==0:\n",
-    "        print('Ohh! yes, it is divisible by 5')\n",
-    "else:\n",
-    "    print('No, it is not divisble by 3 and 5')\n"
    ]
   },
   {
@@ -426,7 +434,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
+   "id": "a81a834e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 is zero\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input(\"Enter the value of a: \"))\n",
+    "\n",
+    "if a > 0:\n",
+    "    print(f\"{a} is a positive number\")\n",
+    "elif a < 0:\n",
+    "    print(f\"{a} is a negative number\")\n",
+    "else:\n",
+    "    print(f\"{a} is zero\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "id": "ade21839",
    "metadata": {},
    "outputs": [
@@ -434,9 +467,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "320\n",
-      "80.0\n",
-      "A+\n"
+      "70 65 85 90\n",
+      "310 / 400\n",
+      "77.5 %\n",
+      "A\n"
      ]
     }
    ],
@@ -445,12 +479,16 @@
     "sub2=int(input(\"enter a marks sub2 \"))\n",
     "sub3=int(input(\"enter a marks sub3 \"))\n",
     "sub4=int(input(\"enter a marks sub4 \"))\n",
+    "print(sub1,sub2,sub3,sub4)\n",
+    "\n",
     "totalmarks=sub1+sub2+sub3+sub4\n",
-    "print(totalmarks)\n",
+    "print(f\"{totalmarks} / 400\")\n",
+    "\n",
     "percent=(totalmarks/400)*100\n",
-    "print(percent)\n",
+    "print(f\"{percent} %\")\n",
+    "\n",
     "if percent>=90:\n",
-    "    print(\"o\")\n",
+    "    print(\"E\")\n",
     "elif percent<90 and percent>=80:\n",
     "    print(\"A+\")\n",
     "elif percent<80 and percent>=70:\n",
@@ -464,34 +502,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "d76b562d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Grade: C\n"
-     ]
-    }
-   ],
-   "source": [
-    "score = 75\n",
-    "if score >= 90:\n",
-    "    print(\"Grade: A\")\n",
-    "elif score >= 80:\n",
-    "    print(\"Grade: B\")\n",
-    "elif score >= 70:\n",
-    "    print(\"Grade: C\")\n",
-    "elif score >= 60:\n",
-    "    print(\"Grade: D\")\n",
-    "else:\n",
-    "    print(\"Grade: F\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "8f5b5a7e",
    "metadata": {},
@@ -500,40 +510,48 @@
     "Python allows you to nest conditional statements within one another, creating more complex decision-making logic.\n",
     "\n",
     "Nested if statements in Python are like opening a series of boxes inside another box. Each box (or if statement) contains its own instructions, and you can have one box inside another.\n",
-    "\n",
-    "<pre><code>if condition1:\n",
+    "```\n",
+    "if condition1:\n",
     "    # block of code\n",
     "    if condition2:\n",
     "        # block of code\n",
     "    else:\n",
     "        # block of code\n",
     "else:\n",
-    "    # block of code</code></pre>\n"
+    "    # block of code\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "c7e18f83",
+   "execution_count": 44,
+   "id": "dcd23095",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x is greater than 5 and equal to 10\n"
+      "not divisible by 3 & 5\n"
      ]
     }
    ],
    "source": [
-    "x = 10\n",
-    "if x > 5 and x==10:\n",
-    "    print(\"x is greater than 5 and equal to 10\")"
+    "t = int(input('enter a number'))\n",
+    "if t % 3 ==0:\n",
+    "    if t % 5 ==0:\n",
+    "        print('divisible by 3 & 5')\n",
+    "    else:\n",
+    "        print('Only divisible by 3')\n",
+    "elif t % 5 ==0:\n",
+    "    print('divisible by 5')\n",
+    "else:\n",
+    "    print('not divisible by 3 & 5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "id": "75396646",
    "metadata": {},
    "outputs": [
@@ -541,24 +559,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x is greater than 5\n",
-      "x is also equal to 10\n"
+      "x is less than or equal to 5\n"
      ]
     }
    ],
    "source": [
-    "x = 10\n",
+    "x = 4\n",
     "if x > 5:\n",
-    "    print(\"x is greater than 5\")\n",
     "    if x == 10:\n",
-    "        print(\"x is also equal to 10\")\n",
+    "        print(\"x is Greater Than 5 and equal to 10\")\n",
+    "    else:\n",
+    "        print(\"x is greater than 5\")\n",
     "else:\n",
     "    print(\"x is less than or equal to 5\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 51,
    "id": "11893c60",
    "metadata": {},
    "outputs": [
@@ -566,31 +584,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-5 is negative number\n",
-      "-5 -ve is odd number\n"
+      "0 is zero\n"
      ]
     }
    ],
    "source": [
-    "x = -5\n",
+    "x = int(input(\"Enter a number: \"))\n",
+    "\n",
     "if x>0:\n",
     "    if x%2==0:\n",
-    "        print(x,\"is even number\")\n",
+    "        print(x,\"is +ve even number\")\n",
     "    else:\n",
-    "        print(x,\"is odd number\")\n",
+    "        print(x,\"is +ve odd number\")\n",
     "elif x<0:\n",
-    "    print(x,\"is negative number\")\n",
     "    if x%2==0:\n",
-    "        print(x,\"-ve is even number\")\n",
+    "        print(x,\"is -ve even number\")\n",
     "    else:\n",
-    "        print(x,\"-ve is odd number\")\n",
+    "        print(x,\"is -ve odd number\")\n",
     "else:\n",
     "    print(x,\"is zero\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 52,
    "id": "06c6e281",
    "metadata": {},
    "outputs": [
@@ -616,37 +633,6 @@
     "        print(\"Scalene triangle\")\n",
     "else:\n",
     "    print(\"Not a valid triangle\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "b9657e80",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "27  is divisible by 3\n",
-      "27  is divisble by only 3 and not by 5\n",
-      "We understood Nested-if\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = int(input('Tell a number : '))\n",
-    "\n",
-    "if a%3==0 or a%5==0:\n",
-    "    print(a, ' is divisible by 3 or 5')\n",
-    "    if a%5==0:\n",
-    "        print(a, ' is divisible by both 3 and 5')\n",
-    "    else:\n",
-    "        print(a, ' is divisble by only 3 and not by 5')\n",
-    "else:\n",
-    "    print(a,' is not divisble by 3 itself hence I wont check if it is diviisible by 5')\n",
-    "    \n",
-    "print('We understood Nested-if')"
    ]
   },
   {
@@ -700,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 53,
    "id": "4d2ac418",
    "metadata": {},
    "outputs": [
@@ -708,7 +694,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "radar\n",
+      "madam\n",
       "string is a palindrome\n"
      ]
     }
@@ -720,6 +706,133 @@
     "    print('string is a palindrome')\n",
     "else:\n",
     "    print('string is not a palindrome')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a50b985",
+   "metadata": {},
+   "source": [
+    "### **5. Conditional Expressions (Ternary Operator)**\n",
+    "- You can write simple if-else statements in a single line using the ternary operator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "ef5a076b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12 is Even\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input(\"Enter the first number: \"))\n",
+    "\n",
+    "even = f\"{a} is Even\" if a % 2 == 0 else f\"{a} is Odd\"\n",
+    "print(even)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "961b3c9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-10 is -ve number\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input(\"Enter the first number: \"))\n",
+    "\n",
+    "num = f\"{a} is +ve number\" if a > 0 else f\"{a} is -ve number\" if a < 0 else \"Number is zero\"\n",
+    "print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "971bc292",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23 is not divisible by 3 & 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = int(input(\"Enter the number: \"))\n",
+    "\n",
+    "div = f\"{b} is divisible by 3 & 5\" if b%3==0 and b%5==0 else f\"{b} is divisible by 3\" if b%3==0 else f\"{b } is divisible by 5\" if b%5==0 else f\"{b} is not divisible by 3 & 5\"\n",
+    "print(div)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "6b374369",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "string is a palindrome\n"
+     ]
+    }
+   ],
+   "source": [
+    "string = input(\"Enter a string: \")\n",
+    "Palindrome = \"string is a palindrome\" if string == string[::-1] else \"string is not a palindrome\"\n",
+    "print(Palindrome)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c47005b",
+   "metadata": {},
+   "source": [
+    "### **6. match-case Statement**\n",
+    "- This is a more advanced conditional construct similar to a switch-case in other languages. It allows matching complex patterns."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "5b9791ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "starts the Engine\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 'start'\n",
+    "\n",
+    "match a:\n",
+    "    case 'start':\n",
+    "        print('starts the Engine')\n",
+    "    case 'end':\n",
+    "        print('Stop the Engine')\n",
+    "    case _:\n",
+    "        print('Not Started')"
    ]
   },
   {
